# kaggle-CV-best11

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.dvc/: config
.github/workflows/: pre-commit.yml
cdiscount/: README.md
dogs_vs_cats/: advanced_with_libs.ipynb  base_from_scratch.ipynb  baseline.ipynb
dogs_vs_cats/data/: .gitignore  advanced_solution.csv.dvc  base_FCONV_from_scratch.csv.dvc  base_FC_from_scratch.csv.dvc  model.onnx.dvc
flowers_tpu/: README.md  advanced_with_libs.ipynb  base_from_scratch.ipynb
flowers_tpu/data/: .gitignore  advanced_res50_augs_CELw_tune.csv.dvc  base_FCONV_from_scratch.csv.dvc  res50_val_f1_score0.7565.onnx.dvc
