[tool.poetry]
name = "kaggle-cv-best11"
version = "0.1.0"
description = "basic ds libs and tools for cv"
authors = ["alexmak123 <alex.m.1@mail.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "kaggle_cv_best11"}]

[tool.poetry.dependencies]
urllib3 = "^1.26.15"
requests = "^2.28.2"
cachecontrol = "^0.12.11"
python = "^3.11"
torch = "^2.3.0"
torchaudio = "^2.3.0"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
pickleshare = "^0.7.5"
imageio = {extras = ["ffmpeg"], version = "^2.34.1"}
torchvision = ">=0.17.1"
opencv-python = "4.8.1.78"
tensorflow = "^2.16.1"
numpy = "^1.26.4"

[tool.black]
line-length = 99
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 99
lines_after_imports = 2

[tool.flake8]
max-line-length = 99
ignore = "E203, E501, W503, B950"
max-complexity = 12
select = "B, C, E, F, W, B9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
